@@ -1,3 +1,9 @@
+2004-09-17  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tkWinWm.c (UpdateWrapper): Ensure that we maintain Z order
+	* tests/winWm.test:              and focus of preexisting window
+	when replacing the wrapper window.
+
 2004-09-16  David Gravereaux <davygrvy@pobox.com>
 
 	* win/makefile.vc : added VC7-safe environment check as used in the
